--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,23 @@
+body{
+font-family: 'Lato';
+}
+
 #chart{
-  width: 500px;
-  height:  400px;
+  width: 70%;
+  min-height: 400px;
   margin: auto;
+}
+
+.subhead{
+font-size: 18px;
+margin-left: 18%;
+margin-right: 18%;
+margin-bottom: 30px;
+}
+
+@media only screen and (max-width: 700px) {
+  #chart{
+    width: 90%;
+    min-height: 250px;
+  }
 }
